# chess-app

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
chess_app/: pyproject.toml  tasks.py
chess_app/documentation/: timesheet.md
chess_app/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
chess_app/src/: main.py
chess_app/src/entities/: board.py  piece.py
chess_app/src/services/: game_service.py  move_validator.py
documentation/: architecture.md  changelog.md  implementation.md  requirements_specification.md  specifications.md  testing.md  timesheet.md  user_manual.md
documentation/weekly_reports/: weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
dokumentaatio/: tuntikirjanpito.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: main.py
src/engine/entities/: board.py  piece.py
src/engine/services/: ai_engine.py  game_service.py  move_generator.py  move_simulator.py  move_validator.py
src/entities/: board.py  models.py  piece.py
src/persistence/: session.py
src/persistence/models/: game.py  user.py
src/persistence/repositories/: game_repository.py  user_repository.py
src/repositories/: game_repository.py  user_repository.py
src/services/: ai_engine.py  board_evaluator.py  db.py  game_service.py  move_generator.py  move_simulator.py  move_validator.py
src/tests/: ai_engine_test.py  check_rules_test.py  game_end_test.py  pawn_test.py
src/ui/: game_window.py  main_menu.py
(+9 files in other folders)
